# py-nwfsc-nmea

./: .gitignore  README.md  noxfile.py  pyproject.toml
docs/: furuno_proprietary.md  simrad_proprietary.md  standard_sentences.md
scripts/: basic_test.py  export_to_parquet.py
src/nwfsc_nmea/: __init__.py  parser.py
src/nwfsc_nmea/proprietary/: README.md  __init__.py  furuno.py  pfec.py  simrad.py
src/nwfsc_nmea/simulator/: __init__.py  core.py  generators.py  kinematics.py  sinks.py
tests/: test_furuno.py  test_pfec.py  test_simrad.py
