[tool.poetry]
name = "nwfsc-nmea"
version = "0.1.0"
description = "Extension for pynmea2 to support NOAA Fisheries (NWFSC) proprietary NMEA sentences."
authors = ["Jim-F <jim.f@noaa.gov>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nwfsc_nmea", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
pynmea2 = "^1.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
